# pypi_pdm_template

./: .env  .flake8  .gitignore  .isort.cfg  .pylintrc  CHANGELOG.md  Makefile  README.md  build.ps1  build.sh  clear.ps1  clear.sh  main.py  pdm.toml  pyproject.toml
.github/workflows/: publish-cicd.yml
pypi_pdm_template/: __init__.py
