[project]
name = "pypi_pdm_template"
version = "0.1.6"
description = "a template for build python package to upload pypi repository bu using pdm"
authors = [
    {name = "lgf4591", email = "lgf4591@outlook.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }
# license = {text = "MIT"}

[project.urls]
# https://daniel.feldroy.com/posts/2023-08-pypi-project-urls-cheatsheet
Home = 'https://github.com/lgf4591/pypi_pdm_template'
Changelog = 'https://github.com/lgf4591/pypi_pdm_template/blob/main/CHANGELOG.md'
Docs = 'https://github.com/lgf4591/pypi_pdm_template/blob/main/README.md#yapf'
Issues = 'https://github.com/lgf4591/pypi_pdm_template/issues'

[[tool.pdm.source]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
# verify_ssl = true
name = "pypi"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.distutils.bdist_wheel]
python_tag = "py3"

[tool.pdm.scripts]
venv.cmd = "pdm venv activate"
_.env_file = ".env"  # 把这个环境变量的文件不仅限于某个命令，而是 pdm run 全局
# start.env_file = ".env"  # 把这个环境变量的文件仅限于start这个命令
start.cmd = "python main.py"
# start.cmd = "flask run -p 54321"
# start = {cmd = [
#     "flask",
#     "run",
#     # Important comment here about always using port 54321
#     "-p", "54321"
# ]}
lint.cmd = "python -m flake8"
fix.cmd = "yapf -ir main.py ./tests ./pypi_pdm_template"
test.cmd = "python -m pytest"
all = {composite = ["lint pypi_pdm_template/ tests/", "test -v tests/"]}


[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
]
lint = [
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pylint>=3.0.2",
]
format = [
    "isort>=5.12.0",
    "black>=23.11.0",
    "yapf>=0.40.2",
]
docs = [
    "mkdocs>=1.5.3",
]
